testsuite/tests/indexed-types/should_fail/T20465.stderr

T20465.hs:17:7: error:
    • Overlapping instances for Cls Proxy arising from a use of ‘foo’
      Matching instances:
        instance Cls a -- Defined at T20465.hs:12:10
        instance Cls Proxy -- Defined at T20465.hs:13:10
    • In the expression: foo
      In an equation for ‘bar’: bar = foo
